--- a/package.json
+++ b/package.json
@@ -9,15 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.5.2",
+    "jose": "^5.0.2",
+    "next": "13.5.6",
+    "nextjs-toploader": "^1.5.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.6"
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.11.0"
   },
   "devDependencies": {
     "autoprefixer": "^10",
-    "postcss": "^8",
-    "tailwindcss": "^3",
+    "daisyui": "^3.9.3",
     "eslint": "^8",
-    "eslint-config-next": "13.5.6"
+    "eslint-config-next": "13.5.6",
+    "postcss": "^8",
+    "prisma": "^5.5.2",
+    "tailwindcss": "^3"
   }
 }
